@@ -71,7 +71,8 @@ Cacti CHANGELOG
 -bug#0001382: cdef.php error due to wrong function name
 -bug#0001383: syntax error in lib/rrd.php with PHP 4.4.4
 -bug#0001384: utilities.php does not handle view_snmp_cache when host_id = -1 (Any)
--bug#0001385: LDAP Error: Group DN could not be found 
+-bug#0001385: LDAP Error: Group DN could not be found
+-bug#0001392: Problem on CDEF function ALL|SIMILAR_DATA_SOURCES_(NO)?DUPS 
 -bug: Remove include/html files to mitigate XSS issues
 -bug: IE generates errors on both the host and graph settings pages
 -bug: Host save failed in FireFox 3 for non-SNMP V3 hosts, complaining about "password mismatch"
